# rv32i-assembler

./: .gitignore  LICENSE  README.md  setup.cfg
examples/: fibs.asm  math.asm
src/asm/: __init__.py  asm_backend.py  instr_info.py  reg_info.py  rv32_parser.py
src/comm/: colors.py  exceptions.py  logging.py  utils.py
src/emu/: __init__.py  cpu.py  csr.py  debug.py  emulator.py  instruction.py  mmu.py  registers.py  rf.py  xgcd.py
src/riscv_assembler/: asm_backend.py  asm_parser.py  code_emitter.py  common.py  convert.py  instr_info.py  reg_info.py  rv32_parser.py  utils.py
src/riscv_assembler/data/: rv32i.json
tests/: emu_conf.json  emucheck.py  filecheck.py  golden.data  simple.py  test.cfg  test_class.py
tests/MC/: arith-valid.s  arith.s  exp-valid.s  exp.s  logic-valid.s  logic.s  rv32i-valid.s  test2-valid.s  test2.s
tests/assembly/: exp.s
tool/: cmd.py
