[metadata]
name = riscv-assembler
author = Luke Li
author_email = zhongwei.li@mavs.uta.edu
description = A simple RISCV assembler that fully supports rv32i for educational purpose.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/r5by/rv32i-assembler
project_urls =
    Bug Tracker = https://github.com/r5by/rv32i-assembler/issues
    Changelog = https://github.com/r5by/rv32i-assembler/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    bitstring

[options.packages.find]
where = src

[options.package_data]
* = data/*.dat

[options.entry_points]
console_scripts =
    riscv_assembler = riscv_assembler.app:entry_point